--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,9 +2,6 @@
 
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+  Task 5 Secure Login
 </h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
-</h2>
 {% endblock %}
