--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -32,6 +32,9 @@
                             <a href="{{ url_for('auth.signup') }}" class="navbar-item">
                                 Sign Up
                             </a>
+			    <a href="{{ url_for('auth.passreset') }}" class="navbar-item">
+				    Reset Password
+			    </a>
 			    {% endif %}
 			    {% if current_user.is_authenticated %}
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
