created sqltable display on webpage for diagnostics

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -41,6 +41,9 @@
                                 Logout
                             </a>
 			    {% endif %}
+                            <a href="{{ url_for('auth.sqltable') }}" class="navbar-item">
+                                SQL Table
+                            </a>
                         </div>
                     </div>
                 </div>
